[Fix] restore scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,7 @@ a {
 }
 
 ::-webkit-scrollbar {
-  width: 8px;
+  width: 0px;
   height: 5px;
 }
 
